# ray

./: Cargo.toml  README.md  build.rs  clippy.toml  myVimLog  rusty-tags.vi
src/: bounds.rs  camera.rs  lib.rs  main.rs  main.rs.bak  material.rs  ray.rs  shape.rs  texture.rs  utils.rs
src/geometry/: .normal.rs.un~  bounds.rs  mod.rs  normal.rs  normal.rs~  object.rs  point.rs  ray.rs  vector.rs
