[package]
name = "ray"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
thiserror = "1.0.29"
structopt = "0.3.23"
itertools = "0.10.1"
env_logger = "0.9.0"
signal-hook = "0.3.10"
proptest = "1.0.0"

image = "0.23.14"
nalgebra = "0.29.0"
nalgebra-glm = "0.15.0"
rand = "0.8.4"
rayon = "1.5.1"
indicatif = { version = "0.16.2", features = ["rayon"] }

[build-dependencies]
anyhow = "1.0.44"
fs_extra = "1.2.0"
glob = "0.3.0"
rayon = "1.5.1"
